automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "in\n",
+    "import pandas as pd\n",
+    "pd.read_csv('heightWei')\n",
     "# Load the dataset into pandas and perform basic inspection\n",
     "\n",
     "\n",
