--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "pd.read_csv('heightWei')\n",
+    "df = pd.read_csv('heightWeight.csv')\n",
+    "df.info\n",
     "# Load the dataset into pandas and perform basic inspection\n",
     "\n",
     "\n",
