automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,11 +41,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20 entries, 0 to 19\n",
+      "Data columns (total 2 columns):\n",
+      "height    20 non-null int64\n",
+      "Weight    20 non-null int64\n",
+      "dtypes: int64(2)\n",
+      "memory usage: 400.0 bytes\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('heightWeight.csv')\n",
-    "df.info\n",
+    "df.describe\n",
     "# Load the dataset into pandas and perform basic inspection\n",
     "\n",
     "\n",
