--- a/index.ipynb
+++ b/index.ipynb
@@ -39,27 +39,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 20 entries, 0 to 19\n",
-      "Data columns (total 2 columns):\n",
-      "height    20 non-null int64\n",
-      "Weight    20 non-null int64\n",
-      "dtypes: int64(2)\n",
-      "memory usage: 400.0 bytes\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>height</th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>66.850000</td>\n",
+       "      <td>165.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.112163</td>\n",
+       "      <td>28.971129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>58.000000</td>\n",
+       "      <td>115.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>63.250000</td>\n",
+       "      <td>143.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>68.500000</td>\n",
+       "      <td>170.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>192.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>74.000000</td>\n",
+       "      <td>210.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          height      Weight\n",
+       "count  20.000000   20.000000\n",
+       "mean   66.850000  165.800000\n",
+       "std     5.112163   28.971129\n",
+       "min    58.000000  115.000000\n",
+       "25%    63.250000  143.750000\n",
+       "50%    68.500000  170.000000\n",
+       "75%    71.000000  192.750000\n",
+       "max    74.000000  210.000000"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('heightWeight.csv')\n",
-    "df.describe\n",
+    "df.describe()\n",
     "# Load the dataset into pandas and perform basic inspection\n",
     "\n",
     "\n",
