--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
     "# from each element , creating and returning a new list. \n",
     "\n",
     "def mean_normalize(var):\n",
-    "    \n",
+    "    normalize = []\n",
     "\n",
     "    pass\n",
     "\n",
