--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -200,9 +200,7 @@
     "# from each element , creating and returning a new list. \n",
     "\n",
     "def mean_normalize(var):\n",
-    "    normalized_list = []\n",
-    "    for x in var:\n",
-    "        \n",
+    "    normalize = []\n",
     "\n",
     "    pass\n",
     "\n",
