automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
     "def mean_normalize(var):\n",
     "    normalized_list = []\n",
     "    for x in var:\n",
-    "        \n",
+    "        normalized_list.app\n",
     "\n",
     "    pass\n",
     "\n",
