automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,8 +201,9 @@
     "\n",
     "def mean_normalize(var):\n",
     "    normalized_list = []\n",
+    "    \n",
     "    for x in var:\n",
-    "        normalized_list.app\n",
+    "        normalized_list.append()\n",
     "\n",
     "    pass\n",
     "\n",
