automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
     "\n",
     "def mean_normalize(var):\n",
     "    normalized_list = []\n",
-    "    \n",
+    "    mean = np.mean(var)\n",
     "    for x in var:\n",
     "        normalized_list.append()\n",
     "\n",
