--- a/index.ipynb
+++ b/index.ipynb
@@ -203,8 +203,7 @@
     "    normalized_list = []\n",
     "    mean = np.mean(var)\n",
     "    for x in var:\n",
-    "        normalized_list.append()\n",
-    "\n",
+    "        normalized_list.append(x = mean)\n",
     "    pass\n",
     "\n",
     "mean_normalize([1,2,3,4,5]), mean_normalize([11,22,33,44,55])\n",
