automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
     "    normalized_list = []\n",
     "    mean = np.mean(var)\n",
     "    for x in var:\n",
-    "        x\n",
+    "        x_normalized = x - mean\n",
     "        normalized_list.append(x - mean)\n",
     "    pass\n",
     "\n",
