--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
     "    mean = np.mean(var)\n",
     "    for x in var:\n",
     "        x_normalized = x - mean\n",
-    "        normalized_list.append(x - mean)\n",
+    "        normalized_list.append(x_normalized)\n",
     "    pass\n",
     "\n",
     "mean_normalize([1,2,3,4,5]), mean_normalize([11,22,33,44,55])\n",
