--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,7 @@
     "# Write a function to take in an iterable, calculate the mean and subtract the mean value\n",
     "# from each element , creating and returning a new list. \n",
     "\n",
-    "np.m\n",
+    "print(np.mean([1,2,3,4,5]))\n",
     "\n",
     "def mean_normalize(var):\n",
     "    normalized_list = []\n",
