automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,12 +206,10 @@
     "# Write a function to take in an iterable, calculate the mean and subtract the mean value\n",
     "# from each element , creating and returning a new list. \n",
     "\n",
-    "print(np.mean([1,2,3,4,5]))\n",
-    "\n",
     "def mean_normalize(var):\n",
     "    normalized_list = []\n",
     "    mean = np.mean(var)\n",
-    "    for x in var:\n",
+    "    for i in var:\n",
     "        x_normalized = x - mean\n",
     "        normalized_list.append(x_normalized)\n",
     "    pass\n",
