automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,23 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.0\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "(None, None)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,8 +203,8 @@
     "    normalized_list = []\n",
     "    mean = np.mean(var)\n",
     "    for i in var:\n",
-    "        x_normalized = x - mean\n",
-    "        normalized_list.append(x_normalized)\n",
+    "        i_normalized = i - mean\n",
+    "        normalized_list.append(i_normalized)\n",
     "    pass\n",
     "\n",
     "mean_normalize([1,2,3,4,5]), mean_normalize([11,22,33,44,55])\n",
