--- a/index.ipynb
+++ b/index.ipynb
@@ -204,8 +204,8 @@
     "def mean_normalize(var):\n",
     "    normalized_list = []\n",
     "    mean = np.mean(var)\n",
-    "    for x in var:\n",
-    "        x_normalized = var[x] - mean\n",
+    "    for i in var:\n",
+    "        i_normalized = var[x] - mean\n",
     "        normalized_list.append(x_normalized)\n",
     "    pass\n",
     "\n",
