automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,8 +206,9 @@
     "    n = 0\n",
     "    mean = np.mean(var)\n",
     "    for i in var:\n",
-    "        i_normalized = var[x] - mean\n",
+    "        i_normalized = var[n] - mean\n",
     "        normalized_list.append(x_normalized)\n",
+    "        n \n",
     "    pass\n",
     "\n",
     "mean_normalize([1,2,3,4,5]), mean_normalize([11,22,33,44,55])\n",
