automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,9 @@
     "        n = n + 1\n",
     "    pass\n",
     "\n",
-    "mean_normalize([1,2,3,4,5]), mean_normalize([11,22,33,44,55])\n",
+    "mean\n",
+    "\n",
+    "#mean_normalize([1,2,3,4,5]), mean_normalize([11,22,33,44,55])\n",
     "\n",
     "# ([-2.0, -1.0, 0.0, 1.0, 2.0], [-22.0, -11.0, 0.0, 11.0, 22.0])"
    ]
