automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "[-0.5, 0.5]\n"
      ]
     }
    ],
@@ -204,9 +204,9 @@
     "        i_normalized = var[n] - mean\n",
     "        normalized_list.append(i_normalized)\n",
     "        n = n + 1\n",
-    "    pass\n",
+    "    return normalized_list\n",
     "\n",
-    "print(mean_normalize([1,1]))\n",
+    "print(mean_normalize([1,2]))\n",
     "\n",
     "#mean_normalize([1,2,3,4,5]), mean_normalize([11,22,33,44,55])\n",
     "\n",
