--- a/index.ipynb
+++ b/index.ipynb
@@ -179,15 +179,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.5, 0.5]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "([-2.0, -1.0, 0.0, 1.0, 2.0], [-22.0, -11.0, 0.0, 11.0, 22.0])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -206,9 +209,8 @@
     "        n = n + 1\n",
     "    return normalized_list\n",
     "\n",
-    "print(mean_normalize([1,2]))\n",
     "\n",
-    "#mean_normalize([1,2,3,4,5]), mean_normalize([11,22,33,44,55])\n",
+    "mean_normalize([1,2,3,4,5]), mean_normalize([11,22,33,44,55])\n",
     "\n",
     "# ([-2.0, -1.0, 0.0, 1.0, 2.0], [-22.0, -11.0, 0.0, 11.0, 22.0])"
    ]
