automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,10 @@
    "outputs": [],
    "source": [
     "# Visualize the height data distribution before and after mean normalization \n",
-    "height = mean_normalize(df['height'])\n"
+    "height = mean_normalize(df['height'])\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install seaborn\n",
+    "import seaborn as sns\n"
    ]
   },
   {
