automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,9 @@
     "height = mean_normalize(df['height'])\n",
     "import sys\n",
     "!{sys.executable} -m pip install seaborn\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "sns.distplot(data.height)\n",
+    "sns.distplot()"
    ]
   },
   {
