automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -344,6 +344,8 @@
     "# Write a function to calculate the dot product of two iterables \n",
     "\n",
     "def dot_product(x,y):\n",
+    "    import numpy as np\n",
+    "    np.array(x)\n",
     "    \n",
     "    \n",
     "    pass\n",
