automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,19 +337,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4, 10, 18])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write a function to calculate the dot product of two iterables \n",
     "\n",
     "def dot_product(x,y):\n",
     "    import numpy as np\n",
-    "    np.array(x)\n",
-    "    \n",
-    "    \n",
-    "    pass\n",
-    "\n",
+    "    return np.array(x) * np.array(y)\n",
+    "   \n",
     "a = [1,2,3]\n",
     "b = [4,5,6]\n",
     "\n",
