automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,16 +337,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 4, 10, 18])"
+       "32"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
     "\n",
     "def dot_product(x,y):\n",
     "    import numpy as np\n",
-    "    return np.array(x) * np.array(y)\n",
+    "    return sum(np.array(x) * np.array(y))\n",
     "   \n",
     "a = [1,2,3]\n",
     "b = [4,5,6]\n",
