automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,8 @@
     "\n",
     "def covariance(var1, var2):\n",
     "    x = mean_normalize(var1)\n",
-    "    \n",
+    "    y = mean_normalize(var2)\n",
+    "    dot_product(x, y)\n",
     "    pass\n",
     "\n",
     "# Uncomment below to check your function\n",
