automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -384,12 +384,11 @@
     "def covariance(var1, var2):\n",
     "    x = mean_normalize(var1)\n",
     "    y = mean_normalize(var2)\n",
-    "    dot_product(x, y)\n",
-    "    pass\n",
+    "    return dot_product(x, y) / (len(var1) - 1)\n",
     "\n",
     "# Uncomment below to check your function\n",
     "\n",
-    "# covariance(data['height'], data['Weight'])\n",
+    "covariance(data['height'], data['Weight'])\n",
     "\n",
     "# 144.75789473684208"
    ]
