--- a/index.ipynb
+++ b/index.ipynb
@@ -550,6 +550,19 @@
     "import math\n",
     "def correlation(var1,var2):\n",
     "    \n",
+    "    mean_norm_var1 = mean_normalize(var1)\n",
+    "        mean_norm_var2 = mean_normalize(var2)\n",
+    "        \n",
+    "        # Try the numpy way for calculating doc product\n",
+    "        var1_dot_var2 = [a * b for a, b in list(zip(mean_norm_var1, mean_norm_var2))]\n",
+    "        \n",
+    "        var1_squared = [i * i for i in mean_norm_var1]\n",
+    "        var2_squared = [i * i for i in mean_norm_var2]\n",
+    "        \n",
+    "        return np.round(sum(var1_dot_var2) / math.sqrt(sum(var1_squared) * sum(var2_squared)), 2)\n",
+    "\n",
+    "correlation(data['height'], data['Weight'])\n",
+    "    \n",
     "    pass\n",
     "\n",
     "# correlation(data['height'], data['Weight'])\n",
